--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,13 +65,15 @@ services:
       - skaben_network
 
   db:
-    image: postgres:latest
+    image: postgres:13.4
     restart: unless-stopped
     volumes:
       - db_volume:/var/lib/postgresql/data
       - ./tmp:/home/root/tmp
     networks:
       - skaben_network
+    ports:
+      - "5432:5432"
     env_file: ".env"
 
 #  prometheus:
