--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     image: skaben/back
     env_file: 'server_core/.env'
     volumes:
-      - ./server_core/skaben:/skaben
+      - ./server_core/skaben:/opt/app/skaben
       - static_volume:/static
       - files_volume:/media
     depends_on:
@@ -33,37 +33,21 @@ services:
       - rabbitmq
     networks:
       - skaben_network
-
-#  workers:
-#    build: 
-#      context: server_core/.
-#    image: skaben/back
-#    env_file: 'server_core/.env'
+#
+#  front:
+#    build:
+#      context: server_front/.
+#    image: skaben/front
+#    environment:
+#      - CHOKIDAR_USEPOLLING=True
+#    env_file: 'server_front/.env'
 #    volumes:
-#      - ./server_core/skaben:/skaben
+#      - ./server_front/app:/app
+#      - ./server_front/dist:/app/dist
+#      - node_modules:/app/node_modules
 #      - static_volume:/static
-#      - files_volume:/media
-#    depends_on:
-#      - back
-#    command: >
-#      sh -c "python manage.py start_workers"
 #    networks:
 #      - skaben_network
-
-  front:
-    build:
-      context: server_front/.
-    image: skaben/front
-    environment:
-      - CHOKIDAR_USEPOLLING=True
-    env_file: 'server_front/.env'
-    volumes:
-      - ./server_front/app:/app
-      - ./server_front/dist:/app/dist
-      - node_modules:/app/node_modules
-      - static_volume:/static
-    networks:
-      - skaben_network
 
   rabbitmq:
     build: './docker_build/rabbitmq'
@@ -90,51 +74,13 @@ services:
       - skaben_network
     ports:
       - "5432:5432"
-    env_file: ".env"
-
-#  prometheus:
-#    build: './docker_build/prom'
-#    ports:
-#      - 9090:9090
-#    command:
-#      - --config.file=/etc/prometheus/prometheus.yml
-#    depends_on:
-#      - rabbitmq
-#    networks:
-#      - skaben_network
-#    user: "65534:65534"
-#
-#  cadvisor:
-#    image: gcr.io/google-containers/cadvisor:latest
-#    container_name: cadvisor
-#    ports:
-#      - 8080:8080
-#    volumes:
-#      - /:/rootfs:ro
-#      - /var/run:/var/run:rw
-#      - /sys:/sys:ro
-#      - /var/lib/docker/:/var/lib/docker:ro
-#    networks:
-#      - skaben_network
-#
-#  grafana:
-#    image: grafana/grafana:latest
-#    restart: unless-stopped
-#    ports:
-#      - 3000:3000
-#    links:
-#      - prometheus:prometheus
-#    volumes:
-#      - grafana_volume:/var/lib/grafana
-#    networks:
-#      - skaben_network
+    env_file: "server_core/.env"
 
 
 volumes:
   db_volume: {}
   static_volume: {}
   files_volume: {}
-  grafana_volume: {}
   node_modules: {}
 
 
