--- a/docker_build/nginx/conf.d/default.conf
+++ b/docker_build/nginx/conf.d/default.conf
@@ -1,7 +1,11 @@
 # nginx configuration file
 
+upstream rabbit-admin {
+  server rabbitmq:15672;
+}
+
 upstream back {
-  server back:8000;
+  server api:8000;
 }
 
 upstream front {
@@ -28,6 +32,16 @@ server {
 
   location /api {
     proxy_pass  http://back;
+    include conf.d/proxy.conf;
+  }
+
+  location /mgmt {
+    proxy_pass  http://back;
+    include conf.d/proxy.conf;
+  }
+
+  location /rabbit-admin {
+    proxy_pass http://rabbit-admin;
     include conf.d/proxy.conf;
   }
 
