--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
         url = ../server_front.git
         update = merge
         branch = main
+[submodule "server_panel"]
+	path = server_panel
+	url = git@github.com:skaben/server_panel.git
