add: healthcheck url

--- a/docker_build/nginx/conf.d/default.conf
+++ b/docker_build/nginx/conf.d/default.conf
@@ -35,6 +35,11 @@ server {
     include conf.d/proxy.conf;
   }
 
+  location /healthcheck {
+    proxy_pass  http://back;
+    include conf.d/proxy.conf;
+  }
+
   location /mgmt {
     proxy_pass  http://back;
     include conf.d/proxy.conf;
