update: rabbitmq conf

--- a/docker_build/rabbitmq/rabbitmq.conf
+++ b/docker_build/rabbitmq/rabbitmq.conf
@@ -13,7 +13,7 @@ mqtt.default_pass     = skabent0mqtt
 mqtt.allow_anonymous  = false
 mqtt.vhost            = /
 mqtt.exchange         = mqtt
-mqtt.subscription_ttl = undefined
+mqtt.max_session_expiry_interval_seconds = 10
 mqtt.prefetch         = 1
 
 # websockets
