--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,14 +15,17 @@ services:
       - ./server_core/static:/static/static
       - files_volume:/media
     depends_on:
-      - db
-      - rabbitmq
-      - redis
+      db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+      redis:
+        condition: service_started
     networks:
       - network_public
       - network_backbone
     command: |
-      sh -c "/opt/scripts/entrypoint.sh"
+      sh -c "/opt/app/entrypoint.sh"
 
   worker:
     <<: &worker
@@ -37,7 +40,10 @@ services:
       volumes:
         - ./server_core:/opt/app
       depends_on:
-        - api
+        api:
+          condition: service_started
+        rabbitmq:
+          condition: service_healthy
       networks:
         - network_backbone
       restart: unless-stopped
@@ -82,6 +88,12 @@ services:
   rabbitmq:
     build: './docker_build/rabbitmq'
     hostname: "rabbitmq"
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping -n rabbit@localhost
+      interval: 20s
+      timeout: 20s
+      retries: 5
+      start_period: 20s
     ports:
       - "15672:15672"
       - "15674:15674"
@@ -105,6 +117,12 @@ services:
   db:
     image: postgres:13.4
     restart: unless-stopped
+    healthcheck:
+      test: pg_isready
+      interval: 15s
+      timeout: 15s
+      retries: 5
+      start_period: 15s
     volumes:
       - db_volume:/var/lib/postgresql/data
       - ./tmp:/home/root/tmp
@@ -114,17 +132,6 @@ services:
       - "5432:5432"
     env_file: "server_core/.env"
 
-  # portainer:
-  #   image: portainer/portainer-ce:latest
-  #   networks:
-  #     - network_public
-  #   ports:
-  #     - "9000:9000"
-  #   volumes:
-  #     - portainer_volume:/data
-  #     - /var/run/docker.sock:/var/run/docker.sock
-  #   restart: unless-stopped
-
   nginx:
     build: './docker_build/nginx'
     restart: unless-stopped
@@ -132,13 +139,13 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ./docker_build/wait-for-it.sh:/wait-for-it.sh
       - ./docker_build/nginx/conf.d/:/etc/nginx/conf.d/
       - ./logs/nginx:/var/log/nginx
       - static_volume:/static
     depends_on:
       - api
       - front
+      - rabbitmq
     networks:
       - network_public
 
