--- a/docker_build/rabbitmq/rabbitmq.conf
+++ b/docker_build/rabbitmq/rabbitmq.conf
@@ -2,6 +2,7 @@
 
 management.load_definitions = /etc/rabbitmq/definitions.json
 
+raft.wal_max_size_bytes = 1048576
 listeners.tcp.default = 5672
 disk_free_limit.absolute = 1GB
 log.file.level = debug
