add: healthchecks, remove: wait-for-it.sh (#1)
* add: update and branch for server_panel module

* update: rabbitmq conf

* add/improve: rabbitmq start time, healthchecks

* add/improve: healthchecks

--- a/docker_build/rabbitmq/rabbitmq.conf
+++ b/docker_build/rabbitmq/rabbitmq.conf
@@ -2,6 +2,7 @@
 
 management.load_definitions = /etc/rabbitmq/definitions.json
 
+raft.wal_max_size_bytes = 1048576
 listeners.tcp.default = 5672
 disk_free_limit.absolute = 1GB
 log.file.level = debug
@@ -13,7 +14,7 @@ mqtt.default_pass     = skabent0mqtt
 mqtt.allow_anonymous  = false
 mqtt.vhost            = /
 mqtt.exchange         = mqtt
-mqtt.subscription_ttl = undefined
+mqtt.max_session_expiry_interval_seconds = 10
 mqtt.prefetch         = 1
 
 # websockets
