--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,23 +59,23 @@ services:
     <<: *worker
     command: python manage.py start_scheduler
 
-  front:
-    image: 'skaben-front:latest'
-    build:
-      context: server_front/.
-    environment:
-      - CHOKIDAR_USEPOLLING=True
-      - VUE_HOST=0.0.0.0
-      - VUE_PORT=3000
-    command: |
-      sh -c "yarn run dev"
-    volumes:
-      - ./server_front/app:/app
-      - ./server_front/app/dist:/app/dist
-      - node_modules:/app/node_modules
-      - static_volume:/static
-    networks:
-      - network_public
+ # front:
+ #   image: 'skaben-front:latest'
+ #   build:
+ #     context: server_front/.
+ #   environment:
+ #     - CHOKIDAR_USEPOLLING=True
+ #     - VUE_HOST=0.0.0.0
+ #     - VUE_PORT=3000
+ #   command: |
+ #     sh -c "yarn run dev"
+ #   volumes:
+ #     - ./server_front/app:/app
+ #     - ./server_front/app/dist:/app/dist
+ #     - node_modules:/app/node_modules
+ #     - static_volume:/static
+ #   networks:
+ #     - network_public
 
   ### INFRASTRUCTURE ###
 
@@ -138,10 +138,29 @@ services:
       - static_volume:/static
     depends_on:
       - api
-      - front
+  #    - front
     networks:
       - network_public
 
+  panel:
+    image: 'skaben-panel:latest'
+    restart: unless-stopped
+    build:
+      context: server_panel/.
+      dockerfile: Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:5000
+      - ASPNETCORE_HTTP_PORT=5000
+#      - ASPNETCORE_HTTPS_PORTS=5001
+    depends_on:
+      - api 
+    networks:
+      - network_public
+      - network_backbone
+    ports:
+      - "5000:5000"
+      
 volumes:
   db_volume: {}
   redis_data: {}
