add/replace: frontend switched to server_panel

--- a/docker_build/nginx/conf.d/default.conf
+++ b/docker_build/nginx/conf.d/default.conf
@@ -12,11 +12,15 @@ upstream front {
   server front:3000;
 }
 
+upstream panel {
+  server panel:5000;
+}
+
 server {
   listen 80 default_server;
 
   location / {
-    proxy_pass http://front/;
+    proxy_pass http://panel/;
     include conf.d/proxy.conf;
  }
 
