--- a/docker_build/nginx/conf.d/default.conf
+++ b/docker_build/nginx/conf.d/default.conf
@@ -35,12 +35,7 @@ server {
     include conf.d/proxy.conf;
   }
 
-  location /healthcheck {
-    proxy_pass  http://back;
-    include conf.d/proxy.conf;
-  }
-
-  location /mgmt {
+  location /ops {
     proxy_pass  http://back;
     include conf.d/proxy.conf;
   }
