add: nginx file size increase

--- a/docker_build/nginx/conf.d/default.conf
+++ b/docker_build/nginx/conf.d/default.conf
@@ -14,6 +14,7 @@ upstream panel {
 
 server {
   listen 80 default_server;
+  client_max_body_size 150M;
 
   location / {
     proxy_pass http://panel/;
