--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
       target: api_build
     healthcheck:
       test: python manage.py check_integrity
-      interval: 1m30s
-      timeout: 20s
+      interval: 15s
+      timeout: 10s
       retries: 5
-      start_period: 30s
+      start_period: 15s
     env_file: 'server_core/.env'
     volumes:
       - ./server_core:/opt/app
@@ -47,7 +47,7 @@ services:
         - ./server_core:/opt/app
       depends_on:
         api:
-          condition: service_started
+          condition: service_healthy
         rabbitmq:
           condition: service_healthy
       networks:
@@ -78,10 +78,10 @@ services:
     hostname: rabbitmq
     healthcheck:
       test: rabbitmq-diagnostics -q ping -n rabbit@rabbitmq
-      interval: 10s
+      interval: 15s
       timeout: 10s
-      retries: 10
-      start_period: 10s
+      retries: 5
+      start_period: 15s
     ports:
       - "15672:15672"
       - "15674:15674"
@@ -132,8 +132,10 @@ services:
       - ./logs/nginx:/var/log/nginx
       - static_volume:/static
     depends_on:
-      - api
-      - rabbitmq
+      api:
+        condition: service_started
+      rabbitmq:
+        condition: service_started
     networks:
       - network_public
 
